# hratc2017_expertinos_team

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hratc2017.files  hratc2017.includes  package.xml
convert_odom/: CMakeLists.txt  package.xml
convert_odom/include/: convert_odom.h
convert_odom/src/: convert_odom.cpp  convert_odom_node.cpp
hector_slam/hector_mapping/launch/: mapping_default.launch
hector_slam/hector_slam_launch/launch/: 0robozin_rhtc_mrpt.launch  2robozin.launch  hector_ugv.launch  rosaria_hector.launch  tutorial.launch
hratc2016_entry_template/: CMakeLists.txt
hratc2016_entry_template/examples/cpp/: get_global_odom.cpp  pointcloud_generator.cpp  read_metal_detector.cpp
hratc2016_entry_template/launch/: pointcloud_generator.launch
hratc2016_framework/: CMakeLists.txt  package.xml
hratc2016_framework/include/gazebo_gps_plugin/: gazebo_ros_gps.h
hratc2016_framework/include/gazebo_mimic_plugin/: mimic_plugin.h
hratc2017_entry/: CMakeLists.txt  README.md  expertinos_bag_2017-03-14-14-40-46.bag  package.xml
hratc2017_entry/bag/: coils_test1.bag
hratc2017_entry/config/: all.perspective  coil_signals.perspective  landmine_analyzer_params.yaml  metal_scanner_params.yaml  obstacle_avoider_params.yaml  pose_estimator.yaml  pose_estimator_params.yaml  scanning_common_params.yaml  twist_mux_params.yaml  waypoints_controller_params.yaml
hratc2017_entry/include/hratc2017/: coil.h  coils.h  coils.h.autosave  displacement_monitor.h  landmine_analyzer.h  landmine_analyzer.h.orig  map.h  map_controller.h  map_coverage.h  metal_scanner.h  obstacle_avoider.h  pose_estimator.h  waypoints_controller.h
hratc2017_entry/include/utilities/: double_mean_filter.h  filter.h  mean_filter.h  point_mean_filter.h  points.h  ros_node.h
hratc2017_entry/launch/: all.launch  debug_obstacle_avoider.launch  entry.launch  expertinos_slam.launch  landmine_analyzer.launch  map_controller.launch  metal_scanner.launch  obstacle_avoider.launch  pose_estimator.launch  run_simulation.launch  run_simulation_and_entry.launch  waypoints_controller.launch  world-empty.launch
hratc2017_entry/map/: empty_world.pgm  empty_world.yaml  empty_world2'.pgm  empty_world2.pgm  empty_world2.yaml  empty_world3.pgm  empty_world_redim.pgm  empty_world_redim.yaml  map.yaml  real_arena.pgm  real_arena.yaml  square_arena.pgm  square_arena.yaml
hratc2017_entry/src/: landmine_analyzer_node.cpp  map_controller_node.cpp  metal_scanner_node.cpp  obstacle_avoider_node.cpp  pose_estimator_node.cpp  waypoints_controller_node.cpp
hratc2017_entry/src/hratc2017/: coil.cpp  coils.cpp  displacement_monitor.cpp  landmine_analyzer.cpp  map.cpp  map_controller.cpp  map_coverage.cpp  metal_scanner.cpp  obstacle_avoider.cpp  pose_estimator.cpp  waypoints_controller.cpp
hratc2017_entry/src/utilities/: double_mean_filter.cpp  exception.cpp  filter.cpp  mean_filter.cpp  point_mean_filter.cpp  points.cpp  ros_node.cpp
hratc2017_entry_template/: CMakeLists.txt  package.xml
hratc2017_entry_template/launch/: random_walk.launch
hratc2017_entry_template/src/: main.cpp
hratc2017_layers/: CMakeLists.txt  costmap_plugins.xml  package.xml
hratc2017_layers/config/: hratc2017_layers_params.yaml  landmines_layer_params.yaml
hratc2017_layers/include/hratc2017/: covered_area_layer.h  landmines_layer.h  obstacles_layer.h
hratc2017_layers/src/hratc2017/: covered_area_layer.cpp  landmines_layer.cpp  obstacles_layer.cpp
hratc2017_robot/: README.md
hratc2017_robot/rviz/: README.md
include/entries/: landmine_analyzer.h  metal_detector_node.h
include/sensors/: coils.h
include/utilities/: enum_converter.h  exception.h  ros_node.h
launch/: entry.launch  metal_detector.launch
p3at_2dnav/: CMakeLists.txt  navigation.rviz  package.xml
p3at_2dnav/config/: amcl_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params_2f.yaml  local_costmap_params.yaml  move_base_params.yaml  navigation.rviz
p3at_2dnav/launch/: amcl.launch  move_base.launch  move_base_2f.launch  navigation.launch  navigation_2f.launch
src/: landmine_analyzer_node.cpp  metal_detector_node.cpp
src/entries/: landmine_analyzer.cpp  metal_detector_node.cpp
src/sensors/: coils.cpp
