<?xml version="1.0"?>
<package>
  <name>convert_odom</name>
  <version>0.0.5</version>
  <description>The convert_odom package</description>
  <maintainer email="audeliano@gmail.com">Audeliano Wolian Li</maintainer>

  <license>BSD</license>
  <url type="website">https://github.com/ricardoej/hratc2017</url>
  <author email="ricardoej@gmail.com">Ricardo Emerson Julio</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
</package>
