<?xml version="1.0"?>
<package>
  <name>hratc2017_entry</name>
  <version>1.0.1</version>
  <description>The hratc2017_entry package.</description>

  <maintainer email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</maintainer>
  <maintainer email="audeliano@gmail.com">Audeliano Wolian Li</maintainer>
  <maintainer email="luis-bonin@unifei.edu.br">Luis Victor Pessiqueli Bonin</maintainer>
  <maintainer email="luizfernandolfn@gmail.com">Luiz Fernando Nunes</maintainer>
  <maintainer email="ricardoej@gmail.com">Ricardo Emerson Julio</maintainer>
  <maintainer email="expertinos.unifei@gmail.com">UNIFEI Expertinos Team</maintainer>

  <license>BSD</license>
  <url type="website">https://github.com/ricardoej/hratc2017</url>
  <author email="ricardoej@gmail.com">Ricardo Emerson Julio</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>metal_detector_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>laser_assembler</build_depend>
  <build_depend>control_msgs</build_depend>
  
  <run_depend>metal_detector_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>husky_navigation</run_depend>
  <run_depend>laser_assembler</run_depend>
  <run_depend>control_msgs</run_depend>
  
</package>
